# tp-jazzjackrabbit2

./: .gitignore  Acciones.h  Arma.h  CMakeLists.txt  Collectible.h  Enemigos.h  Estado.h  README.md  Vagrantfile  auxCode.cpp  client_.cpp  client_.h  client_class.cpp  client_class.h  client_main.cpp  client_protocol.h  common_liberror.cpp  common_liberror.h  common_protocol copy.h  common_protocol.h  common_protocolo.cpp  common_queue.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  common_resolvererror.h  common_socket.cpp  common_socket.h  common_sockets.cpp  common_sockets.h  common_thread.h  config.yaml  dev_utils.md  installer.sh  personaje.cpp  personaje.h  posicion.h  preguntas.txt  server_.cpp  server_.h  (+26 more)
.vagrant/machines/default/libvirt/: vagrant_cwd
client_src/: client_client.cpp  client_client.h  client_game_respuesta.cpp  client_game_respuesta.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h
common_src/: common_protocol_utils.h  common_queue.h  common_sockets.cpp
config/: config.yaml
docs/: diagrama_de_clase.md  portada.txt
img/: std__shared_ptr - cppreference.com.html
img/std__shared_ptr - cppreference.com_files/: js  load(1).php  load(2).php  load(3).php  load(4).php  load(5).php  load(6).php  load(7).php  load.php
include/: animaciones.h  clase_texturas.h  client.h  client_protocol.h  client_receiver.h  client_sender.h  cliente_aceptado.h  enemigos.h  escenario.h  frame.h  game_arma.h  game_comandos.h  game_personaje.h  game_posicion.h  game_respuesta.h  game_state.h  game_state_monitor.h  gameloop_class.h  gameloop_monitor.h  greeter.h  gui.h  msgToSent.h  personaje.h  platform.h  protocol_utils.h  resolvererror.h  server.h  server_aceptador.h  server_protocol.h  server_receiver.h  server_sender.h
include/client_src/: clase_texturas.h  client.h  client_protocol.h  client_receiver.h  client_sender.h  defines.h  dict_monitor.h  frame.h  gameState_monitor.h  game_state_client.h  gamestate_client_monitor.h  gui.h  personaje.h
include/client_src/gui/: gui.h  gui_animaciones.h  gui_audio.h  gui_balas.h  gui_clase_sonidos.h  gui_clase_texturas.h  gui_coleccionables.h  gui_defines_audio.h  gui_defines_frames.h  gui_enemigos.h  gui_escenario.h  gui_frame.h  gui_keyhandler.h  gui_monitor.h  gui_municion.h  gui_personaje.h  gui_platform.h  gui_puntos.h  gui_vida.h
include/common_src/: client_personaje.h  defines_msg.h  defines_platform.h  excepciones.h  lista_monitor.h  msgToSent.h  protocol_utils.h  vector_monitor.h
include/common_src/catedra/: liberror.h  queue.h  sockets.h
include/server_src/: cliente_aceptado.h  game_class.h  game_personaje.h  game_state.h  gameloop_class.h  lobby.h  server_aceptador.h  server_protocol.h  server_receiver.h  server_sender.h  yaml_config.h
include/server_src/game/: game_arma.h  game_class.h  game_collectible.h  game_comandos.h  game_enemigo.h  game_escenario.h  game_municion.h  game_personaje.h  game_personaje_estado.h  game_platform.h  game_posicion.h  game_state.h  game_state_monitor.h  game_velocidad.h  gameloop_class.h  gameloop_monitor.h
server_src/: Acciones.h  Arma.h  Collectible.h  Enemigos.h  Estado.h  Puntos.h  accion.h  arma.cpp  arma.h  game_accion.h  game_arma.cpp  game_arma.h  game_class.cpp  game_class.h  game_collectible.h  game_comandos.cpp  game_comandos.h  game_enemigo.cpp  game_enemigo.h  game_personaje.cpp  game_personaje.h  game_posicion.cpp  game_posicion.h  game_state.cpp  game_state.h  game_state_monitor.cpp  game_state_monitor.h  gameloop_class.cpp  gameloop_class.h  gameloop_monitor.cpp  gameloop_monitor.h  personaje.cpp  personaje.h  posicion.cpp  posicion.h  server_aceptador.cpp  server_aceptador.h  server_class.cpp  server_class.h  server_cliente_aceptado.cpp  (+24 more)
src/: greeter.cpp  gui.cpp  main.cpp
src/client_src/: animaciones.cpp  clase_texturas.cpp  client.cpp  client_client.cpp  client_client.h  client_game_respuesta.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  dict_monitor.cpp  frame.cpp  gameState_monitor.cpp  game_respuesta.cpp  game_state_client.cpp  gamestate_client_monitor.cpp  gui.cpp  main.cpp  personaje.cpp
src/client_src/gui/: gui.cpp  gui_animaciones.cpp  gui_audio.cpp  gui_balas.cpp  gui_clase_sonidos.cpp  gui_clase_texturas.cpp  gui_coleccionables.cpp  gui_enemigos.cpp  gui_escenario.cpp  gui_frame.cpp  gui_keyhandler.cpp  gui_monitor.cpp  gui_municion.cpp  gui_personaje.cpp  gui_platform.cpp  gui_puntos.cpp  gui_vida.cpp
src/common_src/: common_protocol_utils.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  liberror.cpp  resolver.cpp  resolvererror.cpp  sockets.cpp  vector_monitor.cpp
src/common_src/catedra/: resolver.cpp  resolvererror.cpp  sockets.cpp
src/elements/: animaciones.cpp  clase_texturas.cpp  escenario.cpp  frame.cpp  jazz.cpp  lori.cpp  personaje.cpp  platform.cpp  spaz.cpp
src/server_src/: cliente_aceptado.cpp  game_arma.cpp  game_class.cpp  game_class.h  game_collectible.h  game_comandos.cpp  game_comandos.h  game_enemigo.cpp  game_enemigo.h  game_personaje.cpp  game_personaje_estado.h  game_posicion.cpp  game_state.cpp  game_state_monitor.cpp  gameloop_class.cpp  gameloop_monitor.cpp  lobby.cpp  main.cpp  server.cpp  server_aceptador.cpp  server_aceptador.h  server_class.cpp  server_cliente_aceptado.cpp  server_cliente_aceptado.h  server_main.cpp  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_sender.cpp  server_sender.h  yaml_config.cpp
src/server_src/game/: game_arma.cpp  game_class.cpp  game_comandos.cpp  game_enemigo.cpp  game_escenario.cpp  game_municion.cpp  game_personaje.cpp  game_platform.cpp  game_posicion.cpp  game_state.cpp  game_state_monitor.cpp  game_velocidad.cpp  gameloop_class.cpp  gameloop_monitor.cpp
testing/casos/01_single_player_shoot_exit/: __client_0_valgrind__  __client_descriptors__  __server_valgrind__
tests/: CMakeLists.txt  protocol_server_test.cpp  socket_test.h  test_consola_cliente.cpp
ui/: Greeter.ui
(+29 files in other folders)
